--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,6 @@ terraform.tfstate
 bin/
 dist/
 modules-dev/
-/pkg/
 website/.vagrant
 website/.bundle
 website/build
@@ -24,6 +23,7 @@ website/node_modules
 *.iml
 *.test
 *.iml
+.envrc
 
 website/vendor
 
@@ -33,3 +33,8 @@ website/vendor
 
 # Keep windows files with windows line endings
 *.winfile eol=crlf
+
+*.plan
+*.tfstate
+*.hcl.lock
+*.terraformrc*
